# ensembledata-python

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
codegen/: __main__.py
codegen/templates/: client.jinja
ensembledata/api/: __init__.py  _async_client.py  _client.py  _defaults.py  _errors.py  _http.py  _requester.py  _response.py  async_client.py  client.py  errors.py  requester.py  response.py
examples/: example_ig.py  example_reddit.py  example_tt.py  example_twitch.py  example_twitter.py  example_youtube.py
scripts/: generate_sync_client.sh  regenerate_clients.sh
src/: base_interface.py  instagram_interface.py  reddit_interface.py  scraper.py  tiktok_interface.py  twitch_interface.py  twitter_interface.py  youtube_interface.py
tests/: test_clients.py
